# timewarrior-kimai-report

./: Cargo.toml  README.md  on-modify.timewarrior
src/: lib.rs  main.rs
