[package]
name = "kimai_report"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timewarrior_report = { git = "https://github.com/scattenlaeufer/timewarrior-report-rs" }
kimai = { git = "https://github.com/scattenlaeufer/kimai-rs.git" }
