[package]
name = "kimai_report"
version = "0.1.0"
edition = "2018"
description = "Create timesheet records for Kimai from Timewarrior records"
authors = ["Björn Guth <b.guth@netcon-consulting.com>"]
repository = "https://github.com/scattenlaeufer/timewarrior-kimai-report"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timewarrior_report = { git = "https://github.com/scattenlaeufer/timewarrior-report-rs" }
kimai = { git = "https://github.com/scattenlaeufer/kimai-rs.git" }
clap = "2.33.3"
futures = "^0.3"
tokio = { version = "^1.7", features = ["full"] }
